feat: add constructor

--- a/src/components/burger-ingredient-category/burger-ingredient-category.module.css
+++ b/src/components/burger-ingredient-category/burger-ingredient-category.module.css
@@ -11,7 +11,10 @@
 }
 
 .price {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 
 .name {
