--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -4,7 +4,7 @@
 
 .content {
   max-height: calc(100vh - 324px);
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: #8585ad #2f2f37;
 }
