--- a/src/components/burger-ingredient-category/burger-ingredient-category.module.css
+++ b/src/components/burger-ingredient-category/burger-ingredient-category.module.css
@@ -8,6 +8,7 @@
 
 .ingredient {
   position: relative;
+  cursor: pointer;
 }
 
 .price {
@@ -33,4 +34,9 @@
   height: 120px;
   object-fit: contain;
   object-position: center;
+  transition: 0.3s;
+}
+
+.ingredient:hover .image {
+  transform: rotate(10deg);
 }
