--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -10,20 +10,16 @@
   align-items: center;
 }
 
-.menu {
-  display: flex;
-  align-items: center;
-}
-
-.menu_justify_end {
-  justify-content: flex-end;
-}
-
 .menu__list {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
+  align-items: center;
+}
+
+.menu__list_secondary {
+  justify-content: flex-end;
 }
 
 .menu__button {
@@ -33,6 +29,7 @@
   background-color: transparent;
   color: #8585ad;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .menu__button_active {
