--- a/src/pages/register/register.module.css
+++ b/src/pages/register/register.module.css
@@ -18,6 +18,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: none;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.form:disabled {
+  opacity: 0.5;
 }
 
 .options {
