--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -24,3 +24,17 @@
 .navlink:hover {
   color: #fff;
 }
+
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: none;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.form:disabled {
+  opacity: 0.5;
+}
